more updates on styling and content

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ html {
     background-color: #0d1117;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
 * {
     color: #c9d1d9;
     font-family: monospace;
@@ -12,6 +17,15 @@ html {
     grid-template-columns: 1fr 3fr;
 }
 
+.smallFont {
+    font-size: 0.8rem;
+}
+
+.message, .formHeading, .form , .submit {
+    padding-left: 5%;
+}
+
+
 /* ---------- CONTAINER ----------*/
 
 .container {
@@ -21,7 +35,11 @@ html {
     padding: 5% 0;
 }
 
-/*---------- form -------------*/
+/*----------- MESSAGE ----------*/
+
+
+
+/*---------- FORM -------------*/
 
 .input {
     display: flex;
@@ -30,20 +48,35 @@ html {
     padding-left: 0;
 }
 
-form {
+input {
+    background-color: #00ffffad;
+    color: #0e1724;
+}
+
+.formContainer {
+    background-color: #0e1724;
+    box-shadow: 0px 1px 8px #2f3045;
+    padding-right: 20%;
+}
+
+.formHeading {
+    padding-top: 2%;
+}
+
+    form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    background-color: #0e1724;
-    box-shadow: 0px 1px 8px #2f3045;
+    
 }
 
-/*---------- submit -----------*/
+/*---------- SUBMIT -----------*/
 
 button {
     background-color: #2f3045;
     border: 1px solid #c9d1d9;
     border-radius: 4px;
+    margin-bottom: 8px;
 }
 
 /*---------- SIDEBAR -----------*/
@@ -54,7 +87,7 @@ button {
     justify-content: space-between;
     height: 100vh;
     background-image: url(images/unity-part2-lamaery.webp) ;
-    background-size: contain;
+    background-size: cover;
 }
 
 /*---------  header ------------*/
@@ -69,7 +102,7 @@ button {
     height: auto;
 }
 
-/*--------- footer ************/
+/*--------- footer ------------*/
 footer {
     text-align: center;
     padding: 5%;
