--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*----------- GLOBAL -----------*/
+
 html {
     background-color: #0d1117;
 }
@@ -17,8 +19,6 @@ body {
     src: url('fonts/ACaslonPro-Bold.otf');
 }
 
-
-
 .main {
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -32,6 +32,7 @@ body {
     padding-left: 5%;
 }
 
+/* remove arrows from input number field*/
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -52,10 +53,6 @@ input[type=number] {
     justify-content: space-evenly;
     padding: 5% 0;
 }
-
-/*----------- MESSAGE ----------*/
-
-
 
 /*---------- FORM -------------*/
 
@@ -94,13 +91,13 @@ form {
 
 /*---------- SUBMIT -----------*/
 
-
 button {
     background-color: #2f3045;
     border: 1px solid #c9d1d9;
     border-radius: 4px;
     margin-top: 16px;
     margin-bottom: 24px;
+    box-shadow: 0px 1px 2px #2f3045;
 }
 
 button:hover {
@@ -116,6 +113,7 @@ button:active {
     text-decoration: none;
     
 }
+
 .link:hover{ text-decoration: underline;}
 
 /*---------- SIDEBAR -----------*/
@@ -157,4 +155,3 @@ footer {
     text-align: center;
     padding: 5%;
 }
-
